Fixed My Videos text being cut off and fixed stats not showing in share email.

--- a/css/global.css
+++ b/css/global.css
@@ -2691,7 +2691,7 @@ p.nothing {
 }
 
 #videos .text-holder {
-    height: 100px;
+    height: 100%;
 }
 
 #videos .text-holder .videoInfo div,
